# Company-Brain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  config.py  logging_config.py  main.py  middleware.py
backend/scripts/: check_provenance.py  consolidate_decisions.py  embed_events.py  extract_all.py  resolve_entities.py  run_agent_eval.py  run_eval.py  run_ingestion_eval.py  run_killer_queries.py  run_query_eval.py  run_resolution_eval.py  run_search_eval.py  run_streaming_eval.py  seed_synthetic.py
backend/tests/: conftest.py  test_health.py  test_lifespan_logging.py  test_middleware.py  test_migrations.py  test_schemas.py
docs/: README.md
docs/architecture/: overview.md
docs/concepts/: pgvector-and-embeddings.md  what-is-a-knowledge-graph.md  why-graph-beats-rag-here.md
docs/decisions/: 0001-monorepo-structure.md  0002-neo4j-as-graph-database.md  0003-pgvector-vs-dedicated-vector-db.md  0004-fastapi-as-backend.md  0005-uv-and-pydantic-v2.md  0006-structured-logging.md  0007-graph-schema-v1.md  0008-cypher-migration-strategy.md  0009-postgres-event-store-design.md  0010-alembic-migrations.md  0011-synthetic-data-strategy.md  0012-extraction-via-openrouter.md  0013-eval-ground-truth-from-narrative.md  0014-entity-resolution-tiered-confidence.md  0015-merge-decisions-audit-table.md  0016-temporal-query-model.md  0017-multi-source-decision-consolidation.md  0018-query-result-provenance.md  0019-contradiction-message-population.md  0020-frontend-design-philosophy.md  0021-embedding-dimension-migration.md  0022-hybrid-search-blend-weights.md  0023-typed-tools-not-generated-cypher.md  0024-route-then-execute-architecture.md  0025-provenance-verification-loop.md  0026-sse-not-websockets.md  0027-stream-synthesis-only.md  0028-structural-tools-scope.md  0029-router-redesign-two-stage-conceptual.md  0030-verification-skip-for-structural.md  (+6 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vitest.config.ts
scripts/: seed_db.py.placeholder
(+308 files in other folders)
