[project]
name = "company-brain"
version = "0.1.0"
description = "Knowledge graph system for company intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.1.0",
    "neo4j>=5.26.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",
    "httpx>=0.28.0",  # async OpenRouter client (extraction pipeline, Phase 2B)
    "sentence-transformers>=3.0.0",  # entity resolution embeddings (Phase 3A); pulls PyTorch CPU (~300MB)
    "langgraph>=0.2.0",  # agent state machine (Phase 4A); pulls langchain-core, no langchain
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "asyncpg-stubs>=0.30.0",
    "testcontainers[postgresql]>=4.8.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

# ---------------------------------------------------------------------------
# ruff — lint + format in one tool
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# mypy — strict mode
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "backend"
exclude = ["^backend/tests/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "sentence_transformers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
